Replace pause emoji with Unicode double bar, fix vertical alignment
Amp-Thread-ID: https://ampcode.com/threads/T-019c5185-3ac0-70aa-983b-119e7a698d18

--- a/player.css
+++ b/player.css
@@ -739,6 +739,7 @@ td:last-child {
 
 #playPauseBtn.playing {
   padding: 0;
+  padding-bottom: 3px;
 }
 
 #playPauseBtn.paused {
